# Shongi

./: CMakeLists.txt
.github/workflows/: build.yml
src/: eval.cpp  eval.h  io.cpp  io.h  learning.cpp  learning.h  main.cpp  move.h  position.cpp  position.h  search.cpp  search.h
